# Boids

./: .gitignore  Boids.cbp  CMakeLists.txt  README.md
cmake/: FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake
src/: Boid.cpp  Boid.h  CMakeLists.txt  Drawable.cpp  Drawable.h  Flock.cpp  Flock.h  Util.cpp  Util.h  World.cpp  World.h  main-sample.cpp  main.cpp
